--- a/src/content/docs/book/part-2-organised-code/2-organising-code/4-activities.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/4-activities.mdx
@@ -14,7 +14,7 @@ import { YouTube } from 'astro-embed';
 
 Over the next few activities, we're going to be creating a store's point of sale (POS) database to manage transactions and stock. Here we're going to set up the main input loop into separate functions and procedures, similar to what we did [earlier](./2-put-together/01-00-change-calculator) for our calculator.
 
-To start, we're going to create the backbone of the application. This will handle printing "screens" to the terminal, getting the user's input, and changing "screens" based on that input. Make sure you're splitting up your code into functions!
+To start, we're going to create the backbone of the application. This will handle printing "screens" to the terminal, getting the user's input, and changing "screens" based on that input. As you work on this task, make sure you're splitting up your code into functions and procedures!
 
 Your program should:
 
@@ -43,55 +43,64 @@ To make this program, you will need to implement the following functions and pro
 
 ### Dotifin Input System
 
-Over the next several activities, we're going to be creating our own music application... Dotifin! This application will allow us to play music, browse artists, search for our favourite songs, and more! Here we're going to be setting up the main input loop into separate functions, similar to what we did for the earlier music activities.
+<div class="not-content">
+  <YouTube id="mZaNc068i7w" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
-As a start for our Dotifin application, we're going to have to start with the backbone of the application, which will handle printing "screens/functionality" to the terminal, handling user input for numbers, changing screens, as well as the simple music file playing from the earlier activities. Your program should ensure whatever input taken by the user is valid. Make sure you're splitting up your code into functions!
+Over the next few activities, we're going to be creating our own music application "Dotifin"! This application will allow us to play music, browse artists, search for our favourite songs, and more. Here we're going to be setting up the main input loop into separate functions and procedures.
+
+To start, we're going to create the backbone of the application. This will handle printing "screens" to the terminal, getting the user's input, changing screens based on that input. We will also keep the music playing functionality from the [last music player task](../../part-1-instructions/3-control-flow/4-activities#sound-player---changing-the-sound). As you work on this task, make sure you're splitting up your code into functions and procedures!
 
 Your program should:
 
-- Ask the user which "screen/functionality" they would like to choose
-  - This should ask the user to input an int which is displayed next to a "screen/functionality"
-- Wait for user input on each screen, then change the "screen/functionality" based on what option they choose
-- Add a play song "screen" that asks the user for a music file's filename and what they would like to name it, then plays it
-- Add a stop song "screen" which stops any music playing
+- Print a list of "screens" and ask the user to choose one.
+- Wait for user input, then change the "screen" based on what they chose.
+- Have a "screen" that asks the user for a music file's path, a name for the music file, and plays that music file.
+- Have a stop song "screen" which stops any music that is playing.
 
 Validation:
 
-- Ensure that whatever user input your program takes matches the options
-- Ensure any songs loaded are valid (hint: use music_valid(music musicToCheck))
+- Ensure that the user's selection of screen matches one of the options.
+- Ensure that the file path entered by the user represents a valid song (hint: after loading the music, use [`music_valid`](https://splashkit.io/api/audio/#music-valid) to check that what was loaded is a valid music file).
 
-Functions you should have:
+To make this program, you will need to implement the following functions and procedures:
 
-- read_integer(string outputMessage, int min, int max) - Prints a message to prompt user for input, reads an integer from user input and ensures it is an integer, then returns it
-- read_integer_range(string outputMessage, int inputInt) - Prints a message to prompt user for input, reads an integer from user input, ensures it is in an integer and in a specific range, then returns it
-- process_integer_input(int inputInt) - Performs different operations, like changing "screens" based on the integer input
-- print_menu() - Outputs menu information
-- load_song() - Asks the User for a File name and name for their music, loads it, then returns it (You can take this from your earlier tasks and adapt it for C++!)
-- play_song() - Takes in a song and plays it
-- stop_song() - Stops any music from playing
+| <div style='width:155px'>Name</div> | Parameters | Purpose | Returns |
+|------|------------|---------|---------|
+| `read_integer` | a string prompt | repeats printing a prompt to the terminal and asking the user for input until they enter a valid integer | the value the user entered converted to an integer |
+| `read_integer_range` | a string prompt, minimum and maximum integers | repeats printing a prompt and reading an integer from the user until they enter a value within the specified range | the integer value the user entered |
+| `print_menu` | | prints a list of menu options to the terminal | |
+| `read_and_load_song` | | asks the user for a path and a name for a music file, and loads that music. Checks that the music loaded is valid music. Repeats these steps until the music loaded is valid music. | the name of the music that was loaded |
+| `play_song` | the name of a loaded music file | plays the music file | |
+| `stop_song` | | stops playback of whatever music is currently playing | |
 
 ### RPG Collision Tests
 
-Over the next lot of activities, we're going to be creating some functionality for our very own Role Playing Game (RPG)! This game will allow us to walk around, interact with Non-Player Characters (NPCs), pick up and use items, and more! Here we're going to be setting up the main event and render loop, as well as create some more efficient collision tests.
+<div class="not-content">
+  <YouTube id="ppoJ1lbJXYM" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
-As a start to our RPG Game, we're going to start with our event loop and render loop. Your program should first spawn (draw) a player character to the screen, as well as a NPC to the screen. After that, the player should be able to move their character around the screen with WASD, not allowing them to leave the edges of the screen. Lastly, perform a series of collision checks, starting with a very large circle around the player character, then smaller circle, then a precise collision. If the player ever collides with the NPC, stop drawing them for now. Make sure you're splitting up your code into functions!
+Over the next few activities, we're going to be creating a role playing game (RPG) in SplashKit! This game will allow us to walk around, interact with non-player characters (NPCs), pick up and use items, and more! Here we're going to be setting up the main game loop, as well as create some more efficient collision tests.
+
+To start, we're going to create a game loop. Your program should spawn (draw) a player character and an NPC to the screen. The user should be able to move the player character around the screen with the "W", "A", "S", and "D" keys on their keyboard, not allowing them to move past the edges of the screen. For now the NPC will not move. Once you have the player character moving add a basic collision test -- if the player character collides with the NPC, stop drawing the NPC; otherwise, keep drawing the NPC as normal. As you work on this task, make sure you're splitting up your code into functions and procedures!
 
 Your program should:
 
-- Draw the player character to the center of the screen (just a square for now!)
-- Draw a NPC to the screen somewhere away from the character (just a triangle for now!)
-- Allow the player to move their character around the screen with WASD
-  - Don't let the character leave the edges of the screen
-- Perform a series of collision checks:
-  - First, see if anything is within a relatively large circle of the player
-  - If that succeeds, then check a smaller circle that still fits the player inside comfortably
-  - Finally, if that succeeds, check to see if something is actually colliding with our character
-  - Don't Draw the NPC anymore for now if the player character ever collides with them
+- Draw the player character, starting it at the center of the screen (just use a rectangle for now).
+- Draw a NPC to the screen somewhere away from the character (just a triangle for now).
+- Allow the player to move their character around the screen with the "W", "A", "S", and "D" keys, but don't let the player's character move beyond the edges of the screen.
+- Perform a series of collision checks between the player character and the NPC:
+  1. First, see if the NPC is within a relatively large circle centered on the player character.
+  2. If the NPC is within this large circle, then check if the NPC is within a smaller circle centered on the player character. Make sure this smaller circle is still bigger than the player character.
+  3. If the NPC is within this smaller circle, check to see if the NPC (triangle) is colliding with the player character (rectangle) (hint: use [`triangle_rectangle_intersect`](https://splashkit.io/api/geometry/#triangle-rectangle-intersect)).
+  4. If there is a collision, don't draw the NPC. If there is **not** a collision, draw the NPC.
   
-Functions you should have:
+To make this program, you will need to implement the following functions and procedures:
 
-- render() - Performs the drawing of the characters and screen
-- draw_player(int playerX, int playerY) - Draws the player character from their coordinates
-- draw_NPC(int npcX, int npcY) - Draws the NPC from their coordinates
-- collision_radius(float radius, int originX, int originY, int destinationX, int destinationY) - Checks to see if point (desintationX, destinationY) is in circle of size radius at (originX, originY)
-- has_NPC_player_collided(int playerX, int playerY, int npcX, int npcY) - Checks three different collision tests and returns true if all three succeed
+| <div style='width:200px'>Name</div> | Parameters | Purpose | Returns |
+|------|------------|---------|---------|
+| `render` | the player character's X and Y position, the NPC's X and Y position, and whether the NPC is currently dead | Draw the player and the NPC (if the NPC is alive) | |
+| `draw_player` | the player character's X and Y position | draw a rectangle representing the player | |
+| `draw_NPC` | the NPC's X and Y position | draw a triangle representing the NPC | |
+| `collision_in_radius` | a radius and center point (X and Y) for the collision circle, and a second point (X and Y) | check if a point is within the collision circle | true if the point specified by the second (X, Y) is within the collision circle, otherwise false |
+| `have_characters_collided` | the position of two characters in the game (for now you'll pass in the player and NPC positions) | check if two characters in the game have collided | true if the two characters have collided, otherwise false |
