Edit and add videos for P2C3 test your knowledge activities

--- a/src/content/docs/book/part-2-organised-code/2-organising-code/4-activities.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/4-activities.mdx
@@ -6,7 +6,7 @@ import { YouTube } from 'astro-embed';
 
 ## Test Your Knowledge
 
-### Store POS Input System
+### Store POS -- Input System
 
 <div class="not-content">
   <YouTube id="tdjOmYDT15k" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
@@ -21,10 +21,10 @@ Your program should:
 - Print a list of "screens" and ask the user to choose one.
 - Wait for user input, then change the "screen" based on what they chose.
 - Have a "screen" which prompts the user to enter some product details and then outputs them. Product details should include:
-  - Product Name
-  - Product Brand
-  - Product Category (e.g., Dairy, Bakery, Snack, Frozen, etc.)
-  - Product Stock
+  - a name
+  - a brand
+  - a category (e.g., Dairy, Bakery, Snack, Frozen, etc.)
+  - a stock level
 - Print a basic welcome message to the terminal for all other "screens".
 
 Validation:
@@ -41,7 +41,7 @@ To make this program, you will need to implement the following functions and pro
 | `print_menu` | | prints a list of menu options to the terminal | |
 | `read_and_print_product` | | asks the user to enter the details of a product, then prints them to the terminal | |
 
-### Dotifin Input System
+### Dotifin -- Input System
 
 <div class="not-content">
   <YouTube id="mZaNc068i7w" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
@@ -74,7 +74,7 @@ To make this program, you will need to implement the following functions and pro
 | `play_song` | the name of a loaded music file | plays the music file | |
 | `stop_song` | | stops playback of whatever music is currently playing | |
 
-### RPG Collision Tests
+### RPG -- Game Loop and Collision Tests
 
 <div class="not-content">
   <YouTube id="ppoJ1lbJXYM" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
