Minor update to activities

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/4-activities.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/4-activities.mdx
@@ -31,7 +31,7 @@ Now that we have access to arrays, we should be able to work with more than one 
 
 For this iteration, your program should:
 
-- Allow the user to load up to 10 products, not just one.
+- Allow the user to load up to 10 songs, not just one.
 - Have an "Add Song" screen which allows users to add and load a new song to Dotifin.
 - Have a "View Songs" screen which prints a list of the loaded songs to the terminal.
 - Allow the user to select a song from the "View Songs" screen, and play the song, edit the details of that song, or delete it from the list.
