--- a/src/content/docs/book/part-1-instructions/4-project/3-activities.mdx
+++ b/src/content/docs/book/part-1-instructions/4-project/3-activities.mdx
@@ -47,13 +47,14 @@ In this project, you will need to develop a simple puzzle game where the player 
 
 Some SplashKit functions you might need:
 
-- Rnd()
-- KeyDown()
+- [Rnd()](https://splashkit.io/api/utilities/#rnd)
+- [KeyDown()](https://splashkit.io/api/input/#key-down)
 - BitmapCollision()
 
 Your program needs to:
 
-- Spawn the character bitmap in the center of the window
+- Spawn a character bitmap in the center of the window
+  - You can create your bitmaps in paint (or other drawing tool of choice) and save this as a bitmap! (.bmp file)
 - Spawn three key bitmaps of different colours at random locations throughout the window, making sure to not initially overlap with the character
 - Allow the player to move their character around with WASD
 - If the player moves to the edge of the window, they should wrap around to the other side of the window
