Minor fix to shell and kernel

--- a/src/content/docs/book/part-0-getting-started/2-computer-use/1-concepts/02-shell.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/1-concepts/02-shell.mdx
@@ -10,7 +10,7 @@ The **terminal** program provides a text environment, allowing text input and ou
 
 *Why is this program called a shell?*
 
-This comes from an analogy relating to nuts. In the real world, the shell of a nut is a thin wrapper around its kernel or core. In a computer, the shell is the command interpreter that gives you access to the core of the operating system. Continuing the analogy, the operating system is also known as a **kernel**, the same as the inside of a nut. The kernel provides tools which abstract away many of the lower-level details of interacting with the computer's hardware. All other programs *grow* out of the kernel, just like plants grow out of the kernel of a nut or seed.
+This comes from an analogy relating to nuts. In the real world, the shell of a nut is a thin wrapper around its kernel or core. In a computer, the shell is the command interpreter that gives you access to the core of the operating system. Continuing the analogy, the core of the operating system is also known as a **kernel**, the same as the inside of a nut. The kernel provides tools which abstract away many of the lower-level details of interacting with the computer's hardware. All other programs *grow* out of the kernel, just like plants grow out of the kernel of a nut or seed.
 
 ![Shows the command from the terminal to the shell](./images/terminal-shell.png)
 
