Fix broken links

--- a/src/content/docs/book/part-1-instructions/2-communicating-syntax/0-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/2-communicating-syntax/0-overview.mdx
@@ -17,7 +17,7 @@ After this, we take a step back to look at some of the terminology that plays an
 - [Expression](../1-concepts/03-expression): a place in a statement where a value is calculated.
 - [Identifier](../1-concepts/04-identifier): the used to identify a building block (eg. method, variable, constant) you have created.
 
-In [Putting it Together](./2-put-together), we explore the way you can use syntax to help turn your ideas into code.
+In [Putting it Together](../2-put-together), we explore the way you can use syntax to help turn your ideas into code.
 
 ## Learning Goals
 
