--- a/src/content/docs/book/part-1-instructions/3-control-flow/0-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/0-overview.mdx
@@ -13,16 +13,16 @@ So far you have seen how to create [programs](../1-sequence-and-data/1-concepts/
 
 In this part of the journey, we will examine the following new instructions and how we can use them in programs:
 
-- [Compound Statement](./1-concepts/02-0-compound-statement): groups statements together.
-- [If Statement](./1-concepts/03-1-if): run some code if a condition is true.
-- [Case Statement](./1-concepts/03-2-case): selectively run a branch of code.
-- [While Loop](./1-concepts/04-1-while-loop): loop after testing a condition.
-- [Do While Loop](./1-concepts/04-2-do-while): loop then test a condition.
-- [For Loop](./1-concepts/04-3-for-loop): loop a specific number of times.
+- [Compound Statement](../1-concepts/02-0-compound-statement): groups statements together.
+- [If Statement](../1-concepts/03-1-if): run some code if a condition is true.
+- [Case Statement](../1-concepts/03-2-case): selectively run a branch of code.
+- [While Loop](../1-concepts/04-1-while-loop): loop after testing a condition.
+- [Do While Loop](../1-concepts/04-2-do-while): loop then test a condition.
+- [For Loop](../1-concepts/04-3-for-loop): loop a specific number of times.
 
 In addition to these actions, you will be introduced to at a new data type:
 
-- [Boolean](./1-concepts/01-0-boolean-data): a [data type](../1-sequence-and-data/1-concepts/06-type) representing a *true* or *false* value.
+- [Boolean](../1-concepts/01-0-boolean-data): a [data type](../1-sequence-and-data/1-concepts/06-type) representing a *true* or *false* value.
 
 To help with these concepts, you may find it useful to revise the following programming building blocks:
 
@@ -34,7 +34,7 @@ It is also important that you understand the following terminology:
 - [Statement](../2-communicating-syntax/1-concepts/02-statement): in instruction performed in your code.
 - [Type](../1-sequence-and-data/1-concepts/06-type): a kind of data used in your code.
 
-Once we have explored the new programming concepts, we will see how we can use them together to [improve our change calculator](./2-put-together/01-0-change-calculator/) and [build a small game](./2-put-together/02-00-fly-catch).
+Once we have explored the new programming concepts, we will see how we can use them together to [improve our change calculator](../2-put-together/01-0-change-calculator/) and [build a small game](../2-put-together/02-00-fly-catch).
 
 ## Learning Goals
 
