--- a/src/content/docs/book/part-2-organised-code/2-organising-code/4-activities.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/4-activities.mdx
@@ -12,7 +12,7 @@ import { YouTube } from 'astro-embed';
   <YouTube id="tdjOmYDT15k" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
 </div>
 
-Over the next few activities, we're going to be creating a store's point of sale (POS) database to manage transactions and stock. Here we're going to set up the main input loop into separate functions and procedures, similar to what we did [earlier](./2-put-together/01-00-change-calculator) for our calculator.
+Over the next few activities, we're going to be creating a store's point of sale (POS) database to manage transactions and stock. Here we're going to set up the main input loop into separate functions and procedures, similar to what we did [earlier](../2-put-together/01-00-change-calculator) for our calculator.
 
 To start, we're going to create the backbone of the application. This will handle printing "screens" to the terminal, getting the user's input, and changing "screens" based on that input. As you work on this task, make sure you're splitting up your code into functions and procedures!
 
