Fix more broken links

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-03-expressions-with-arrays.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-03-expressions-with-arrays.mdx
@@ -86,7 +86,7 @@ int main()
     int data[NUM_VALUES];
     int i;
 
-    printf("Enter %d integers (enter after each)", NUM_VALUES);
+    printf("Enter %d integers (press 'Enter' after each value)", NUM_VALUES);
 
     i = 0;
     scanf("%d", &data[i]);
