--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-00-array.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-concepts/00-00-array.mdx
@@ -20,9 +20,9 @@ import imgArray from './images/mmv-array.png';
 - The elements of an array are accessed via an index.
 - The first element has the index **0**, the second has the index **1**, etc.
 - Individual elements of an array are much like a standard variable.
-- You can store a value in an element of an array using an [assignment statement](../03-assignment-statement-with-array).
-- You can use the value from an element of an array in an [expression](../04-expressions-with-arrays).
-- The [for loop](../06-for-loop) works perfectly with an array, you can repeat an action *for each element of an array*.
+- You can store a value in an element of an array using an [assignment statement](../00-02-assign-element).
+- You can use the value from an element of an array in an [expression](../00-03-expressions-with-arrays).
+- The [for loop](../01-for-loop) works perfectly with an array, you can repeat an action *for each element of an array*.
 
 :::
 
