--- a/src/content/docs/book/part-2-organised-code/3-structuring-data/4-activities.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-structuring-data/4-activities.mdx
@@ -68,7 +68,7 @@ Validation:
 ### RPG -- Player and NPC Attributes
 
 <div class="not-content">
-  <YouTube id="PvBDR5HMLFo" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="-wrcqskoYlk" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
 </div>
 
 Now that we have a basic game loop and player movement, let's give the player character and NPC some attributes which we can use to make our life easier.
