--- a/src/content/docs/book/part-2-organised-code/10-project/4-activities.mdx
+++ b/src/content/docs/book/part-2-organised-code/10-project/4-activities.mdx
@@ -2,9 +2,15 @@
 title: Activities
 ---
 
+import { YouTube } from 'astro-embed';
+
 ## Test Your Knowledge
 
 ### Creating a Film and TV Show Database
+
+<div class="not-content">
+  <YouTube id="1QJMwqHZHlE" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 In this project, you will need to develop a database for managing user's watched movies & TV shows, including; their favourites, ratings and reviews, genres, displaying lists by separate attributes, Actors, Directors.
 
@@ -17,6 +23,10 @@ Your program needs to:
   - These displays should include the option to sort by specific attributes
 
 ### Creating a Tile-Based RPG
+
+<div class="not-content">
+  <YouTube id="OPMlHHinZPM" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 In this project, you will need to develop a Tile-Based Role Playing Game (RPG) where the screen will be separated up into different square tiles in which the player can move between tiles. Tiles can be either traversable or non-traversable, and can have different effects on the Player Character if they enter that Tile. Non-Player Characters will spawn randomly throughout the world which the Player Character will be able to interact with in a way you choose. The game will include Quests which can include a variety of things, and the Player Character will have an inventory which stores items to be used with Quests.
 
