Add fixed videos for P2C3

--- a/src/content/docs/book/part-2-organised-code/3-structuring-data/4-activities.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-structuring-data/4-activities.mdx
@@ -9,7 +9,7 @@ import { YouTube } from 'astro-embed';
 ### Store POS -- Creating Products
 
 <div class="not-content">
-  <YouTube id="8UTA-brTW5Q" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="V76uK_JyoEg-brTW5Q" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
 </div>
 
 Now that we've got the backbone of the store POS, we can add some more functionality. Here we're going to be creating and incorporating the concept of "Stock" into the program.
@@ -37,7 +37,7 @@ Validation:
 ### Dotifin -- Creating Songs and Artists
 
 <div class="not-content">
-  <YouTube id="ElAbT1d9WsU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+  <YouTube id="3VjUeRelMTU" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
 </div>
 
 Now that we've got the backbone of Dotifin, we can add some song information to make the program feel more like a proper music application.
