Fix missing utilities header

--- a/src/content/docs/book/part-2-organised-code/4-indirect-access/2-put-together/02-maze.mdx
+++ b/src/content/docs/book/part-2-organised-code/4-indirect-access/2-put-together/02-maze.mdx
@@ -152,7 +152,7 @@ There isn't much logic in this small prototype, as the main objectives are to cr
 
 For this we will need to create:
 
-- `read_int` function - using either the SplashKit `read_line` code or `scanf`.
+- `read_integer` function - using either the SplashKit `read_line` code or `scanf`.
 - `new_path` function - to populate a path between rooms.
 - `new_room` function - to populate a room with a title and description.
 - `print_path` procedure - to output details of a path as part of a list the user can choose from
