Fix copyright attributions

--- a/src/content/docs/book/part-0-getting-started/2-computer-use/0-installation/2-2-pi-computer.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/0-installation/2-2-pi-computer.mdx
@@ -213,9 +213,10 @@ Using the _Raspberry Pi_ Multi-tool will give you several advantages:
 - You can play around with Unix without risking your day-to-day computer (which you can switch to Linux once you are more confident)
 - The Raspberry Pi include pins for **General Purpose Input / Output** (**GPIO**) though a [40-pin header](https://www.raspberrypi.com/documentation/computers/raspberry-pi.html#gpio-and-the-40-pin-header) on the board:
 
-    ![Raspberry Pi 40-pin header](https://www.raspberrypi.com/documentation/computers/images/GPIO-Pinout-Diagram-2.png)
+![Raspberry Pi 40-pin header](https://www.raspberrypi.com/documentation/computers/images/GPIO-Pinout-Diagram-2.png)
+<div class="caption">Image © Raspberry Pi Ltd, licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International</a> (CC BY-SA)</div>
 
-    We can use this to interact with electronics and see how we can control things in the real world using code.
+We can use this to interact with electronics and see how we can control things in the real world using code.
 
 - Playing with a Raspberry Pi is just more fun 😁.
 
