--- a/src/content/docs/book/part-0-getting-started/3-building-programs/2-put-together/2-hello-world-gui.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/2-put-together/2-hello-world-gui.mdx
@@ -20,6 +20,7 @@ dotnet add package SplashKit
 After running the command above, your `HelloWorld.csproj` file will have been updated to look like this:
 
 ![A VS Code window showing the SplashKit included in the project file](./images/splashkit-package-csproj.png)
+<div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
 :::
 
 Now we can use all the SplashKit functionality in our program &#128526;
@@ -49,6 +50,7 @@ WriteLine("Using SplashKit!");
 We would get this output in the Terminal (shown in the Green Box):
 
 ![A VS Code window showing the program being run in the terminal.](./images/cli-hello-world-splashkit.png)
+<div class="caption">Image not subject to The Programmer's Field Guide <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
 :::
 
 :::tip[Troubleshooting tip:]
