Fix broken link

--- a/src/content/docs/book/part-2-organised-code/3-structuring-data/4-activities.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-structuring-data/4-activities.mdx
@@ -88,5 +88,5 @@ For this iteration, your program should:
   - a `Player`
   - a `NPC`
   - a game state (one of: Running, Won, Lost)
-- Be updated from the [previous iteration](../2-organising-code/4-activities#rpg--game-loop-and-collision-tests) to make use of a single `Player`, `NPC`, and `Game`.
+- Be updated from the [previous iteration](../../2-organising-code/4-activities#rpg--game-loop-and-collision-tests) to make use of a single `Player`, `NPC`, and `Game`.
 - Draw the NPC at all times (even if the player character is colliding with it), but change the NPC's colour from "normal" to "close" if the player character is close.
