--- a/src/content/docs/book/part-2-organised-code/4-indirect-access/2-put-together/02-maze.mdx
+++ b/src/content/docs/book/part-2-organised-code/4-indirect-access/2-put-together/02-maze.mdx
@@ -294,80 +294,7 @@ In C/C++ you can use `NULL` or `nullptr` to represent a pointer to nothing. We c
 
 Try updating one of your paths to have the `nullptr` as its destination. What happens when you run your program? Why does this happen?
 
-You can guard against this in the `move_player` code. See if you can get this working so that it runs even when paths go nowhere.
-
-:::note
-For this we will not change the rooms to use member functions, but embed the dynamic array we have created.
-:::
-
-## Adding Paths
-
-Adding multiple paths to a room is as simple as adding a `paths` field to the `room_struct`. Doing this will mean that we then need to update the `new_room` code to make sure it initialises the result with an empty dynamic array.
-
-The following code shows how you can create an empty dynamic array. The `{}` can be used to create empty path data to be used as the default if needed.
-
-```cpp
-room_data new_room(string title, string description)
-{
-  room_data result = { 
-    title,
-    description,
-    dynamic_array<path_data>(0, {})
-  };
-
-  return result;
-}
-```
-
-In `main` you can now move the paths into a room. In my case, I am going to put my existing paths into room 1. Then I can add some more paths to the other rooms.
-
-The code to add a path to a room would look like this:
-
-```cpp
-path_data p1 = new_path("A large sliding door", &r2);
-// becomes
-r1.paths.add(new_path("A large sliding door", &r2));
-```
-
-At this stage we have rooms that now contain a variable number of paths that lead to other rooms in the maze.
-
-## Printing the room
-
-Now we have paths in a room, we can change the code for printing a room so that it prints all the paths in the room as well.
-
-We already have the code to print a path, and its index. So you can code this with a for loop where you access each path from `room->paths`.
-
-:::tip
-Remember you can use `room->paths.size` to get the number of paths to be printed.
-:::
-
-I suggest you add a message above this list of paths saying something like "There are paths leading:". This will let the user know what the list refers to.
-
-Now you can remove the printing of paths from main. This is all done in `print_room` now.
-
-## Exploring the maze
-
-The player will be in the `current_room`. Now that the room has paths, we can ask the user which path they want to take. As they move around they will see the different paths in the different rooms.
-
-To code this, let's create an `explore` procedure. This can take a parameter for the `room_ptr` where the player is located. As we want to update this, we need to pass this pointer by reference in the same way we have with `move_player`. This will mean we can update the passed in room pointer.
-
-:::tip[Pointer by reference?]
-
-Yes, you can pass a reference to a pointer. As you recall, a reference is just a pointer itself. So this is now, in a way, a pointer to a pointer.
-
-If you want to work with the pointers yourself, you can create a pointer pointer using `room_data **`
-
-:::
-
-Within `explore`, we can print the room, then read in the path the user wants to take. The index they provide us can then be used to access the path that the player should move through.
-
-If the room pointer is in a `current_room` variable, and we read the path the user chooses into an `option` variable, then we can achieve this move using:
-
-```cpp
-move_player(current_room, current_room->paths[option]);
-```
-
-Notice here we get the paths from the `current_room`. This will mean the user only has access to the room they are currently in. When they move to a new room, they will only have access to the paths in that room.
+You can guard against this in the `print_room` code. See if you can get this working so that it runs even when paths go nowhere.
 
 ## The main logic
 
