Complete panorama for organised code

--- a/src/content/docs/book/part-2-organised-code/2-organising-code/4-activities.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/4-activities.mdx
@@ -101,6 +101,6 @@ To make this program, you will need to implement the following functions and pro
 |------|------------|---------|---------|
 | `render` | the player character's X and Y position, the NPC's X and Y position, and whether the NPC is currently dead | Draw the player and the NPC (if the NPC is alive) | |
 | `draw_player` | the player character's X and Y position | draw a rectangle representing the player | |
-| `draw_NPC` | the NPC's X and Y position | draw a triangle representing the NPC | |
+| `draw_npc` | the NPC's X and Y position | draw a triangle representing the NPC | |
 | `collision_in_radius` | a radius and center point (X and Y) for the collision circle, and a second point (X and Y) | check if a point is within the collision circle | true if the point specified by the second (X, Y) is within the collision circle, otherwise false |
 | `have_characters_collided` | the position of two characters in the game (for now you'll pass in the player and NPC positions) | check if two characters in the game have collided | true if the two characters have collided, otherwise false |
